--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
     </div>
 </nav>
 
-<header class="bg-light text-dark text-center py-5">
+<!-- Header -->
+<header class="bg-light text-dark text-center py-5" id="header">
     <div class="container">
-        <img src="images/profile.jpg" alt="Profile Picture of B M Rauf" class="rounded-circle mb-4" style="width: 150px; height: 150px; object-fit: cover;">
+        <img src="images/profile.jpg" alt="Profile Picture of B M Rauf" class="rounded-circle mb-4 profile-pic">
         <h1 class="display-4 font-weight-bold">B M Rauf</h1>
-        <p class="lead">Aspiring Computer Scientist</p>
+        <p class="lead">Aspiring Learner🌐</p>
     </div>
 </header>
 
 
 <section id="about" class="py-5 bg-about">
     <div class="container">
-        <h2 class="text-center mb-4">About Me</h2>
+        <h2 class="text-center mb-4">About Me 👨‍💻</h2>
         <div class="row">
             <!-- Introduction Card -->
             <div class="col-md-4 mb-4">
@@ -87,7 +88,7 @@
 
 <section id="skills" class="bg-light py-5">
     <div class="container">
-        <h2 class="text-center mb-4">Skills</h2>
+        <h2 class="text-center mb-4">Skills 💻</h2>
         <div class="row text-center">
             <div class="col-md-4">
                 <div class="skill-card bg-orange text-white mb-4 p-4 rounded">
@@ -129,7 +130,7 @@
 
 <section id="education" class="py-5">
     <div class="container">
-        <h2 class="text-center mb-4">Education</h2>
+        <h2 class="text-center mb-4">Education 🎓</h2>
         <div class="row text-center">
             <div class="col-md-4">
                 <div class="card shadow mb-4 p-4">
@@ -161,7 +162,7 @@
 
 <section id="organizations" class="bg-light py-5">
     <div class="container">
-        <h2 class="text-center mb-4">Organizations</h2>
+        <h2 class="text-center mb-4">Organizations 🏢</h2>
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <div class="card shadow mb-4 p-4 text-center">
@@ -181,7 +182,7 @@
 
 <section id="contact" class="py-5">
     <div class="container">
-        <h2 class="text-center mb-4">Contact</h2>
+        <h2 class="text-center mb-4">Contact 📞</h2>
         <p class="text-center">Email: <a href="mailto:raufthenapking@gmail.com">raufthenapking@gmail.com</a></p>
         <div class="text-center">
             <a href="https://github.com/raufbiswas" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
