--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B M Rauf's Portfolio</title>
+    <title>B M Rauf</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prosto+One&family=Hedvig+Letters&display=swap">
@@ -33,6 +33,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./admin.html">Admin</a>
                 </li>
             </ul>
         </div>
@@ -86,6 +89,38 @@
     </div>
 </section>
 
+<section id="education" class="py-5">
+    <div class="container">
+        <h2 class="text-center mb-4">Education 🎓</h2>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <div class="card shadow mb-4 p-4 cs-card">
+                    <div class="card-body">
+                        <h4>Bachelor of Science in Computer Science and Engineering</h4>
+                        <p><a href="https://www.bracu.ac.bd" target="_blank" rel="noopener noreferrer" class="link-text">BRAC University</a>, Bangladesh (September 2022 - Present)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow mb-4 p-4 hsc-card">
+                    <div class="card-body">
+                        <h4>HSC (Science)</h4>
+                        <p>Maheshpur Government Degree College, Bangladesh - GPA 5.00 (July 2019 - February 2022)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow mb-4 p-4 ssc-card">
+                    <div class="card-body">
+                        <h4>SSC (Science)</h4>
+                        <p>Shankarhuda Bathangacchi Secondary School, Bangladesh - GPA 5.00 (January 2013 - June 2019)</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="skills" class="bg-light py-5">
     <div class="container">
         <h2 class="text-center mb-4">Skills 💻</h2>
@@ -128,32 +163,51 @@
     </div>
 </section>
 
-<section id="education" class="py-5">
+<section id="things-i-love" class="bg-light py-5">
     <div class="container">
-        <h2 class="text-center mb-4">Education 🎓</h2>
+        <h2 class="text-center mb-4">Things I Love ❤️</h2>
         <div class="row text-center">
             <div class="col-md-4">
-                <div class="card shadow mb-4 p-4">
-                    <div class="card-body">
-                        <h4>Bachelor of Science in Computer Science and Engineering</h4>
-                        <p>BRAC University, Bangladesh (September 2022 - Present)</p>
-                    </div>
+                <div class="love-card sleep-card mb-4 p-4 rounded">
+                    <i class="fas fa-bed fa-2x mb-3"></i>
+                    <h5>Sleep</h5>
+                    <p>"Sleep is the best meditation." - Dalai Lama</p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card shadow mb-4 p-4">
-                    <div class="card-body">
-                        <h4>HSC (Science)</h4>
-                        <p>Maheshpur Government Degree College, Bangladesh - GPA 5.00 (July 2019 - February 2022)</p>
-                    </div>
+                <div class="love-card photography-card mb-4 p-4 rounded">
+                    <i class="fas fa-camera fa-2x mb-3"></i>
+                    <h5>Photography</h5>
+                    <p>"Photography is the story I fail to put into words." - Destin Sparks</p>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="love-card cat-card mb-4 p-4 rounded">
+                    <i class="fas fa-cat fa-2x mb-3"></i>
+                    <h5>Cats</h5>
+                    <p>"Cats choose us; we don’t own them." - Kristin Cast</p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card shadow mb-4 p-4">
-                    <div class="card-body">
-                        <h4>SSC (Science)</h4>
-                        <p>Shankarhuda Bathangacchi Secondary School, Bangladesh - GPA 5.00 (January 2013 - June 2019)</p>
-                    </div>
+                <div class="love-card movie-card mb-4 p-4 rounded">
+                    <i class="fas fa-film fa-2x mb-3"></i>
+                    <h5>Watching Movies</h5>
+                    <p>"Movies are a door to another world." - Anonymous</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="love-card mobile-card mb-4 p-4 rounded">
+                    <i class="fas fa-mobile-alt fa-2x mb-3"></i>
+                    <h5>Using Mobile Phones</h5>
+                    <p>"The smartphone is a tool for connection." - Anonymous</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="love-card food-card mb-4 p-4 rounded">
+                    <i class="fas fa-utensils fa-2x mb-3"></i>
+                    <h5>Eating Foods</h5>
+                    <p>"Food is the ingredient that binds us together." - Anonymous</p>
                 </div>
             </div>
         </div>
@@ -165,10 +219,10 @@
         <h2 class="text-center mb-4">Organizations 🏢</h2>
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <div class="card shadow mb-4 p-4 text-center">
+                <div class="card shadow mb-4 p-4 text-center org-card">
                     <div class="card-body">
-                        <h4 class="organization-title">EK JUBO SONGHO</h4> <!-- Header title -->
-                        <hr class="title-separator"> <!-- Line separator -->
+                        <h4 class="organization-title">EK JUBO SONGHO</h4>
+                        <hr class="title-separator">
                         <p class="position-info">Founding Member · Jan 2022 - Present</p>
                         <p>We are currently in the process of establishing the formal structure of our organization, which consists of 22 members. Understanding the necessity of a significant budget for organizational development, we are actively working to contribute financially from our personal expenses in order to give the organization a structured form. Our aspiration is to successfully complete the formalization process by the year 2028.</p>
                     </div>
