--- a/index.html
+++ b/index.html
@@ -260,14 +260,14 @@
         <p class="text-center mb-4">Email: <a href="mailto:raufthenapking@gmail.com" class="text-blue-500 underline">raufthenapking@gmail.com</a></p>
         <div class="text-center">
             <div class="social-buttons space-x-4">
-                <a href="https://github.com/raufbiswas" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
-                <a href="https://www.linkedin.com/in/raufbiswas/" target="_blank" class="btn btn-primary"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="https://www.facebook.com/raufbiswas" target="_blank" class="btn btn-info"><i class="fab fa-facebook"></i> Facebook</a>
-                <a href="https://twitter.com/raufbiswas" target="_blank" class="btn btn-info"><i class="fab fa-twitter"></i> Twitter</a>
-                <a href="https://www.instagram.com/raufbiswas/" target="_blank" class="btn btn-danger"><i class="fab fa-instagram"></i> Instagram</a>
-                <a href="https://t.me/raufbiswas" target="_blank" class="btn btn-info"><i class="fab fa-telegram"></i> Telegram</a>
-                <a href="https://leetcode.com/raufbiswas/" target="_blank" class="btn btn-warning"><i class="fab fa-leetcode"></i> LeetCode</a>
-                <a href="https://www.hackerrank.com/profile/raufbiswas" target="_blank" class="btn btn-dark"><i class="fab fa-hackerrank"></i> HackerRank</a>
+                <a href="https://github.com/mebmrauf" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://www.linkedin.com/in/mebmrauf/" target="_blank" class="btn btn-primary"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="https://www.facebook.com/mebmrauf" target="_blank" class="btn btn-info"><i class="fab fa-facebook"></i> Facebook</a>
+                <a href="https://twitter.com/mebmrauf" target="_blank" class="btn btn-info"><i class="fab fa-twitter"></i> Twitter</a>
+                <a href="https://www.instagram.com/mebmrauf/" target="_blank" class="btn btn-danger"><i class="fab fa-instagram"></i> Instagram</a>
+                <a href="https://t.me/mebmrauf" target="_blank" class="btn btn-info"><i class="fab fa-telegram"></i> Telegram</a>
+                <a href="https://leetcode.com/mebmrauf/" target="_blank" class="btn btn-warning"><i class="fab fa-leetcode"></i> LeetCode</a>
+                <a href="https://www.hackerrank.com/profile/mebmrauf" target="_blank" class="btn btn-dark"><i class="fab fa-hackerrank"></i> HackerRank</a>
                 <a href="https://codeforces.com/profile/bmrauf" target="_blank" class="btn btn-danger"><i class="fab fa-codeforces"></i> Codeforces</a>
                 <a href="https://www.geeksforgeeks.org/user/raufbiswas/" target="_blank" class="btn btn-success"><i class="fab fa-geeksforgeeks"></i> GeeksforGeeks</a>
             </div>
