--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.0.2">
 </head>
 <body class="font-sans bg-gray-100 text-gray-800">
 
@@ -82,7 +82,7 @@
                     <i class="fas fa-lightbulb"></i>
                 </div>
                 <h5 class="card-title text-2xl font-semibold mb-3">🌟 My Interests</h5>
-                <p class="text-gray-600">While I’m exploring various tech fields, I'm open to tackling challenges across multiple domains, each one an opportunity to learn and grow.</p>
+                <p class="text-gray-600">While I’m still exploring where my true passion lies, I’m open to venturing into various tech domains. Every new challenge is an opportunity to learn and grow! Currently, I’m especially intrigued by the cybersecurity sector and am considering pursuing it further, though I’m keeping my options open as I explore other areas in tech.</p>
             </div>
         </div>
     </div>
@@ -287,7 +287,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="scripts.js"></script>
+<script src="scripts.js?v=1.0.2"></script>
 <script>
     // Change navbar style on scroll
     window.addEventListener('scroll', function() {
