--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="hidden md:flex justify-center items-center md:w-1/2 mt-6 md:mt-0">
             <div class="animated-icons flex space-x-4 text-white opacity-80">
-                <i class="fas fa-code text-4xl cursor-pointer" onclick="scrollToSection('whatImGoodAt')"></i>
+                <i class="fas fa-code text-4xl cursor-pointer" onclick="scrollToSection('whatImExploring')"></i>
                 <i class="fas fa-graduation-cap text-4xl cursor-pointer" onclick="scrollToSection('education')"></i>
                 <i class="fas fa-camera text-4xl"></i>
             </div>
@@ -68,12 +68,19 @@
             </div>
 
             <!-- What I’m Good At Card -->
-            <div id="whatImGoodAt" class="about-card relative p-6 text-center bg-white rounded-lg shadow-lg transform hover:-translate-y-1 hover:shadow-2xl transition duration-300">
+            <div id="whatImExploring" class="about-card relative p-6 text-center bg-white rounded-lg shadow-lg transform hover:-translate-y-1 hover:shadow-2xl transition duration-300">
                 <div class="icon mb-4 text-4xl text-green-500">
                     <i class="fas fa-code"></i>
                 </div>
-                <h5 class="card-title text-2xl font-semibold mb-3">🔧 What I’m Good At</h5>
-                <p class="text-gray-600">I'm proficient in Python, and I’m currently focused on Data Structures, Algorithms, and Databases. I excel at staying calm under pressure and enjoy solving complex problems!</p>
+                <h5 class="card-title text-2xl font-semibold mb-3">What I'm Exploring</h5>
+                <div class="text-gray-600">
+                    <ul>
+                        <li>Cybersecurity</li>
+                        <li>Web Development</li>
+                        <li>Artificial Intelligence</li>
+                    </ul>
+                </div>
+                <p><b>Although I am exploring the development sector,<br>I don’t intend to work in it.</b></p>
             </div>
 
             <!-- My Interests Card -->
