--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body class="font-sans bg-gray-100 text-gray-800">
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-md fixed-top transition duration-300 ease-in-out">
+<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
     <div class="container mx-auto px-4">
-        <a class="navbar-brand font-bold text-xl text-indigo-600" href="#">B M Rauf</a>
+        <a class="navbar-brand text-indigo-600" href="#">B M Rauf</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-end" id="navbarNav">
-            <ul class="navbar-nav space-x-4">
-                <li><a class="nav-link rounded-lg px-3 py-2 text-gray-600 hover:bg-indigo-100 hover:text-indigo-600 transition duration-200" href="#about">About Me</a></li>
-                <li><a class="nav-link rounded-lg px-3 py-2 text-gray-600 hover:bg-indigo-100 hover:text-indigo-600 transition duration-200" href="#skills">Skills</a></li>
-                <li><a class="nav-link rounded-lg px-3 py-2 text-gray-600 hover:bg-indigo-100 hover:text-indigo-600 transition duration-200" href="#education">Education</a></li>
-                <li><a class="nav-link rounded-lg px-3 py-2 text-gray-600 hover:bg-indigo-100 hover:text-indigo-600 transition duration-200" href="#organizations">Organizations</a></li>
-                <li><a class="nav-link rounded-lg px-3 py-2 text-gray-600 hover:bg-indigo-100 hover:text-indigo-600 transition duration-200" href="#things-i-love">Love</a></li>
-                <li><a class="nav-link rounded-lg px-3 py-2 text-gray-600 hover:bg-indigo-100 hover:text-indigo-600 transition duration-200" href="#contact">Contact</a></li>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link" href="#organizations">Organizations</a></li>
+                <li class="nav-item"><a class="nav-link" href="#things-i-love">Love</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -89,7 +89,7 @@
                     <i class="fas fa-lightbulb"></i>
                 </div>
                 <h5 class="card-title text-2xl font-semibold mb-3">🌟 My Interests</h5>
-                <p class="text-gray-600">While I’m still exploring where my true passion lies, I’m open to venturing into various tech domains. Every new challenge is an opportunity to learn and grow! Currently, I’m especially intrigued by the cybersecurity sector and am considering pursuing it further, though I’m keeping my options open as I explore other areas in tech.</p>
+                <p class="text-gray-600">While I’m still exploring where my true passion lies, I’m open to venturing into various tech domains. Every new challenge is an opportunity to learn and grow! I’m especially intrigued by the cybersecurity sector and am considering pursuing it further, though I’m keeping my options open as I explore other areas in tech.</p>
             </div>
         </div>
     </div>
@@ -180,6 +180,28 @@
     </div>
 </section>
 <!-- Skills -->
+
+<!-- Certifications -->
+<section id="certifications" class="py-16 bg-white">
+    <div class="container mx-auto px-6">
+        <h2 class="text-center text-4xl font-bold mb-10 text-gray-800">Certifications 🏆</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+
+            <!-- Certification Card 1 -->
+            <div class="certification-card p-6 bg-gradient-to-r from-green-400 to-green-500 text-white rounded-3xl shadow-lg hover:shadow-2xl transform hover:-translate-y-2 transition duration-300">
+                <h4 class="text-2xl font-semibold mb-2">Python (Basic)</h4>
+                <p class="text-sm">
+                    Issued by <span class="font-semibold">HackerRank</span> <br>
+                    <span class="text-xs">(January 2025)</span>
+                </p>
+                <a href="https://www.hackerrank.com/certificates/iframe/2b4da4265ffa" target="_blank" class="text-white underline mt-4 block">View Certificate</a>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!-- Certifications -->
+
 
 <!-- Things I Love -->
 <section id="things-i-love" class="bg-light py-5">
@@ -276,7 +298,7 @@
                 <a href="https://leetcode.com/mebmrauf/" target="_blank" class="btn btn-warning"><i class="fab fa-leetcode"></i> LeetCode</a>
                 <a href="https://www.hackerrank.com/profile/mebmrauf" target="_blank" class="btn btn-dark"><i class="fab fa-hackerrank"></i> HackerRank</a>
                 <a href="https://codeforces.com/profile/bmrauf" target="_blank" class="btn btn-danger"><i class="fab fa-codeforces"></i> Codeforces</a>
-                <a href="https://www.geeksforgeeks.org/user/raufbiswas/" target="_blank" class="btn btn-success"><i class="fab fa-geeksforgeeks"></i> GeeksforGeeks</a>
+                <a href="https://www.geeksforgeeks.org/user/mebmrauf/" target="_blank" class="btn btn-success"><i class="fab fa-geeksforgeeks"></i> GeeksforGeeks</a>
             </div>
         </div>
     </div>
@@ -286,7 +308,7 @@
 
 <!-- Footer -->
 <footer class="footer text-center py-4">
-    <p>&copy; 2024 B M Rauf. All Rights Reserved.</p>
+    <p>&copy; 2025 B M Rauf. All Rights Reserved.</p>
 </footer>
 <!-- Footer -->
 
